--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>my蘑菇街</title><base href=https://yeqian09.github.io/shopping-mall/ ><link rel=icon href=https://s10.mogucdn.com/new1/v1/bmisc/3ce382db3c8aaca5d07bd36711e77134/171169993508.ico type=image/x-icon><link rel=stylesheet href=./static/css/animate.css><link rel=stylesheet href=./static/css/swiper.css><link rel=stylesheet href=./static/iconfont/iconfont.css><link rel=stylesheet href=./static/css/toast.css><script src=./static/js/common.js></script><script src=./static/js/jquery.js></script><script src=./static/js/toast.js></script><script src=./static/js/swiper.js></script><link href=/static/css/app.33d6eeca101066363e9359c3e4d63c3b.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.d1a388a3d6a9bf0e8ca9.js></script><script type=text/javascript src=/static/js/app.79aeb0a109783b6d8221.js></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset=utf-8>
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <title>my蘑菇街</title>
+    <base href=https://yeqian09.github.io/shopping-mall/>
+    <link rel=icon href=https://s10.mogucdn.com/new1/v1/bmisc/3ce382db3c8aaca5d07bd36711e77134/171169993508.ico type=image/x-icon>
+    <link rel=stylesheet href=./static/css/animate.css>
+    <link rel=stylesheet href=./static/css/swiper.css>
+    <link rel=stylesheet href=./static/iconfont/iconfont.css>
+    <link rel=stylesheet href=./static/css/toast.css>
+    <script src=./static/js/common.js></script>
+    <script src=./static/js/jquery.js></script>
+    <script src=./static/js/toast.js></script>
+    <script src=./static/js/swiper.js></script>
+    <link href=./static/css/app.33d6eeca101066363e9359c3e4d63c3b.css rel=stylesheet>
+</head>
+
+<body>
+    <div id=app></div>
+    <script type=text/javascript src=./static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
+    <script type=text/javascript src=./static/js/vendor.d1a388a3d6a9bf0e8ca9.js></script>
+    <script type=text/javascript src=./static/js/app.79aeb0a109783b6d8221.js></script>
+</body>
+
+</html>
